--- a/new_website/package.json
+++ b/new_website/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:build": "vuepress build",
-    "docs:dev": "vuepress dev"
+    "serve": "vuepress dev"
   },
   "keywords": [],
   "author": "",
